source/gameengine/Ketsji/KX_Dome.cpp
@@ -2044,6 +2044,7 @@ void KX_Dome::RenderDomeFrame(KX_Scene* scene, KX_Camera* cam, int i)
 	cam->NodeUpdateGS(0.f);
 
 	scene->CalculateVisibleMeshes(m_rasterizer,cam);
+	scene->UpdateAnimations(m_engine->GetFrameTime());
 	scene->RenderBuckets(camtrans, m_rasterizer);
 }
 
